009-include-logs-for-applications

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -42,3 +42,9 @@ spring:
             - Path=/microservice3
           filters:
             - TokenRelay=
+
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
